# Whats-App-AI-Agent

./: README.md
backend/: create_table.py  main.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  build_graph.py  graph_state.py  request_validate.py
backend/src/core/: prompts.py  schedules.py
backend/src/edges/: edges.py
backend/src/modules/image/: image_to_text.py  text_to_image.py
backend/src/modules/memory/long_term/: memory_manager.py  vector_store.py
backend/src/modules/schedules/: context_generation.py
backend/src/modules/speechs/: speech_to_text.py  text_to_speech.py
backend/src/nodes/: audio_node.py  context_injection_node.py  conversation_node.py  image_node.py  memory_extraction_node.py  memory_injection_node.py  router_node.py  summarize_conversation_node.py
backend/src/utils/: chains.py
frontend/: package.json
frontend/src/: App.js  index.css
frontend/src/components/: chatBotBody.jsx  login.jsx  request.js
