[tool.poetry]
name = "what's App AI Agent"
version = "0.1.0"
description = "Your own AI buddy"
authors = ["Navaneethan J <naveenkrishnan@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
chainlit = ">=1.3.2"
fastapi = ">=0.115.6"
groq = ">=0.13.1"
langchain-community = ">=0.3.13"
langchain-groq = ">=0.2.2"
langchain = ">=0.3.13"
pydantic = "2.10.0"
together = ">=1.3.10"
langgraph = ">=0.2.60"
langchain-openai = ">=0.2.14"
pydantic-settings = ">=2.7.0"
pre-commit = ">=4.0.1"
supabase = ">=2.11.0"
langgraph-checkpoint-duckdb = ">=2.0.1"
duckdb = ">=1.1.3"
langgraph-checkpoint-sqlite = ">=2.0.1"
aiosqlite = ">=0.20.0"
qdrant-client = ">=1.12.1"
sentence-transformers = ">=3.3.1"
elevenlabs = "1.51.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"